--- a/assets/css/react-main.css
+++ b/assets/css/react-main.css
@@ -6262,12 +6262,12 @@ ol ol li {
 
 .post__author {
   margin-bottom: 20px; }
-  .post__author img {
+  /* .post__author img {
     width: 40px;
     height: 40px;
     border-radius: 100%;
     overflow: hidden;
-    margin-right: 12px; }
+    margin-right: 12px; } */
   .post__author .more {
     float: right;
     font-size: 16px;
