--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -27,12 +27,27 @@
 }
 
 .avatar {
-    border-radius: 100%;
     overflow: hidden;
     margin-right: 12px;
-    width: 80px;
-    height: 80px;
-    /* margin-top: 15px; */
+}
+
+.round-avatar {
+    border-radius: 100%;
+}
+
+.avatar-small {
+    width: 30px;
+    height: 30px;
+}
+
+.avatar-medium {
+    width: 50px;
+    height: 50px;
+}
+
+.avatar-large {
+    width: 100px;
+    height: 100px;
 }
 
 .info-number-line {
