--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -242,3 +242,11 @@ li.list-group-item {
     height: 4em;
     margin-bottom: 1em;
 }
+
+.next-dating-header {
+
+}
+
+.next-dating-header-row1 {
+    background: #F2F8FC;
+}
