--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -250,3 +250,17 @@ li.list-group-item {
 .next-dating-header-row1 {
     background: #F2F8FC;
 }
+
+.user-setting {
+    z-index: 1;
+    position: relative;
+}
+
+.tag {
+    padding: 5px;
+    display: inline-block;
+    background: deepskyblue;
+    border-radius: 5px;
+    margin-right: 5px;
+    color: #fff;
+}
