--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -301,3 +301,8 @@ li.list-group-item {
 .add-cafe-basic .form-horizontal {
     margin-bottom: 10px;
 }
+
+.control-block {
+    margin: auto;
+    width: 50%;
+}
