--- a/assets/css/react-main.css
+++ b/assets/css/react-main.css
@@ -125,7 +125,7 @@ Description: "HTML-template"
 /*------------- #HEADER --------------*/
 .header {
   height: 70px;
-  background-color: #3f4257;
+  background-color: #fff;
   padding-right: 70px;
   position: fixed;
   top: 0;
@@ -245,7 +245,7 @@ Description: "HTML-template"
     height: 20px; }
 
 .control-block {
-  float: right;
+  /*float: right;*/
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
