--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -399,6 +399,8 @@ li.list-group-item {
 
 .dating-slide .slick-slide {
     padding: 0 10px;
+}
+
 .landing-item .landing-item-thumb .btnhenho {
     margin-bottom: 0;
     position: absolute;
