--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -267,6 +267,7 @@ li.list-group-item {
     background: deepskyblue;
     border-radius: 5px;
     margin-right: 5px;
+    margin-bottom: 5px;
     color: #fff;
 }
 
