--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -452,10 +452,95 @@ div#this-month {
 
 .image-chooser {
     clear: both;
-    margin-bottom: 15px;
+}
+
+.event-theme {
+    margin-bottom: 10px;
 }
 
 .image-chooser img {
     height: 130px;
     width: 100%;
+    cursor: pointer;
+}
+
+.selected-image {
+    border: solid 5px #3498db;
+}
+
+.modal-header .close {
+    padding: 23px 25px 0px !important;
+    margin: -23px 5px 0px -23px !important;
+}
+
+/* Map */
+.map, #map-canvas {
+    height: 300px;
+    width:100%;
+    margin: 0px;
+    padding: 0px
+}
+
+#pac-input {
+    background-color: #fff;
+    padding: 0 11px 0 13px;
+    width: 100%;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    text-overflow: ellipsis;
+    border: solid 2px #acafc1;
+    border-radius: 25px;
+    background-color: #ffffffa6;
+    margin-bottom: 15px;
+}
+
+#pac-input:focus {
+    border-color: #4d90fe;
+    padding-left: 14px;  /* Regular padding-left + 1. */
+    
+}
+
+#map {
+    height: 300px;
+}
+
+.cafe-image {
+    background-color: #2c3e50;
+    height: 100px;
+    margin-bottom: 10px;
+    padding-right: 5px;
+}
+
+.add-cafe-banner img {
+    width: 100%;
+    height: 300px;
+}
+
+.btn-add-image {
+    position: absolute;
+    right: 5px;
+    background-color: #34495e;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#btn-cafe-1, #btn-cafe-2 {
+    float: right;
+    margin-right: 15px;
+}
+
+.cafe-header-banner {
+    background-color: #0c2461;
+    padding: 15px;
+    color: #fff;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+
+.cafe-header-banner h4 {
+    color: #fff;
+    font-weight: 600;
 }
