--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -581,3 +581,42 @@ img.address-image {
 #create-event-alert-content {
     margin-top: 25px;
 }
+
+.custom-control-label {
+    position: unset !important;
+    margin-left: 20px;
+}
+
+input[type=radio], input[type=checkbox] {
+    z-index: 4;
+}
+.custom-control-label::before {
+    border: solid 1px #2980b9;
+}
+
+#cafe-avatar {
+    position: relative;
+}
+
+.btn-change-avatar {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    left: 0;
+    border-radius: 50%;
+    border: solid 2px #2980b9;
+    opacity: 0.3;
+    cursor: pointer;
+}
+
+.btn-change-avatar:hover {
+    opacity: 0.8;
+    background-color: #2c3e50
+}
+
+#btn-normal-img {
+    width: 100%;
+    text-align: center;
+    height: 100px;
+    font-size: -webkit-xxx-large;
+}
