add link to post header

--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -722,3 +722,7 @@ input[type=radio], input[type=checkbox] {
     background-color: #2980b9;
     color: #fff;
 }
+
+.post__author {
+    cursor: pointer;
+}
