fix dating detail

--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -726,3 +726,7 @@ input[type=radio], input[type=checkbox] {
 .post__author {
     cursor: pointer;
 }
+
+.register-item {
+    margin-bottom: 15px
+}
