fix update user

--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -739,3 +739,9 @@ input[type=radio], input[type=checkbox] {
 .right {
     text-align: right;
 }
+
+#upload-id-card {
+    position: unset;
+    color: #fff;
+    font-weight: 600
+}
