--- a/assets/landing/css/style.css
+++ b/assets/landing/css/style.css
@@ -1,6 +1,6 @@
 
 body {
-	background: url(../../../storage/app/public/additional-info/background.jpg) left top repeat;
+	background: url('../../../public/images/main/background-02.jpg') left top repeat;
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	font-weight: 300;
