--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -244,8 +244,22 @@ li.list-group-item {
 
 .group-navigator {
     background-color: white;
-    height: 4em;
+    /* height: 4em; */
     margin-bottom: 1em;
+}
+
+.navigator-link {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+#filter-couple {
+    height: 3em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .next-dating-header {
@@ -744,4 +758,23 @@ input[type=radio], input[type=checkbox] {
     position: unset;
     color: #fff;
     font-weight: 600
+}
+
+.couple-img-slider {
+    position: relative;
+}
+
+.couple-button {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    z-index: 5;
+}
+
+.couple-button button {
+    margin: 10px
 }
