--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -804,3 +804,19 @@ input[type=radio], input[type=checkbox] {
 .slick-active { 
   padding: 20px 0; 
 }
+
+.preview-img {
+    position: relative;
+}
+
+.preview-img img {
+    width: 100%
+}
+
+.preview-img button {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    border: none;
+    background: none;
+}
