add event subscriber

--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -891,3 +891,8 @@ button.slick-arrow {
     min-height: 100px;
     padding: 10px;
 }
+
+.custom-input {
+    display: block !important;
+    height: 1.5em;
+}
