--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -135,7 +135,8 @@ img{ max-width:100%;}
 /* .messaging { padding: 0 0 50px 0;} */
 .msg_history {
   height: 420px;
-  overflow-y: auto;
+  /*overflow-y: auto;*/
+    overflow-y: scroll;
 
 }
 
