--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -3,6 +3,7 @@
     color: #2c3e50;
     border-radius: 50%;
     padding: 0.75em !important;
+    margin: 0!important;
     text-align: center;
     box-shadow: #7f8c8d 2px 2px;
 }
@@ -1001,7 +1002,11 @@ button.slick-arrow {
 }
 
 .btn-function {
-    width: 100%
+    width: 100%;
+    border-radius: 0;
+    border: none;
+    height: 50px;
+    font-size: 20px;
 }
 
 .ui-block {
@@ -1073,4 +1078,33 @@ button.slick-arrow {
 
 .btn-post.active {
     color: #0586DA;
+}
+
+button#safe-btn {
+    background-color: #27ae60;
+}
+
+button#gift-btn {
+    background-color: #f39c12;
+}
+
+button#fortune-btn {
+    background-color: #673AB7;
+}
+
+.id-card-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
+
+#id-verify-regulation {
+    border: 2px #2980b9 solid;
+    border-radius: 5px;
+    padding: 15px;
+}
+
+.id-card-preview {
+    width: 60%;
 }
