--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -93,6 +93,7 @@
 .status-info-icon {
     width: 40px;
     height: 40px;
+    margin-right: 1em;
 }
 
 .vip-upgrade {
@@ -1213,4 +1214,27 @@ button.arrow-btn {
     border: 1px solid #95a5a6;
     padding: 15px;
     margin-bottom: 15px;
+}
+
+.gift {
+    border: 3px solid #2980b9;
+    margin-bottom: 10px;
+    height: 250px;
+    padding: 15px;
+    position: relative;
+}
+
+.gift-image {
+    width: 75%;
+    max-height: 200px;
+    margin: auto;
+}
+
+.gift h5 {
+    position: absolute;
+    bottom: 5px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
