--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -1369,3 +1369,26 @@ button.arrow-btn {
     font-size: 1.25em;
     color: red;
 }
+
+.ReactModal__Content.ReactModal__Content--after-open {
+    padding: 30px!important;
+    top: 50%!important;
+    left: 50%!important;
+    right: auto!important;
+    bottom: auto!important;
+    margin-right: -50%!important;
+    transform: translate(-50%, -50%)!important;
+}
+
+img.gift-type-image {
+    width: 100%;
+    height: 250px;
+    object-fit: contain;
+}
+
+.col-4.gift-type {
+    max-width: 250px;
+    border: solid;
+    padding: 10px;
+    margin: 0 15px;
+}
