--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -1392,3 +1392,18 @@ img.gift-type-image {
     padding: 10px;
     margin: 0 15px;
 }
+
+.preventive-form {
+    border: solid #34495e;
+    border-radius: 15px;
+    padding: 15px;
+}
+
+#choose-product-btn {
+    margin: 0;
+}
+
+#wishlist-icon {
+    font-size: 2.25em;
+    cursor: pointer;
+}
