--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -1407,3 +1407,23 @@ img.gift-type-image {
     font-size: 2.25em;
     cursor: pointer;
 }
+
+.address-type {
+    padding: 5px;
+    color: #fff;
+    background: crimson;
+    font-weight: 700;
+    width: 75px;
+}
+
+.address-tag {
+    position: absolute;
+    top: 135px;
+}
+
+img.product-thumbnail {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    margin-bottom: 15px;
+}
