--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -90,7 +90,16 @@ body a {
 }
 
 .post-photo {
+    margin-left: -25px;
+    margin-right: -25px;
     margin-bottom: 15px;
+}
+
+.shared-post-photo {
+    margin-left: -15px;
+    margin-right: -15px;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto, .col-xxl, .col-xxl-1, .col-xxl-10, .col-xxl-11, .col-xxl-12, .col-xxl-2, .col-xxl-3, .col-xxl-4, .col-xxl-5, .col-xxl-6, .col-xxl-7, .col-xxl-8, .col-xxl-9, .col-xxl-auto {
@@ -1225,7 +1234,7 @@ button.arrow-btn {
 
 .shared-post {
     border: 1px solid #95a5a6;
-    padding: 15px;
+    padding: 15px 15px 0px 15px;
     margin-bottom: 15px;
 }
 
@@ -1470,6 +1479,11 @@ img.product-thumbnail {
     background: #fff;
     padding-top: 10px;
     padding-bottom: 10px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+    border-bottom: solid 2px;
 }
 
 .more-menu {
@@ -1500,8 +1514,17 @@ img.product-thumbnail {
 }
 
 @media screen and (max-width: 768px) {
+    .container {
+        padding: 0
+    }
+
     .control-icon.more.has-items {
         font-size: 1.5em;
         margin: 0 !important;
+    }
+
+    .header-spacer {
+        display: block;
+        height: 130px;
     }
 }
