--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -1401,6 +1401,7 @@ button.arrow-btn {
     margin-right: -50%!important;
     transform: translate(-50%, -50%)!important;
     max-width: 80%;
+    max-height: 70%;
 }
 
 img.gift-type-image {
