fix filter form event and agency

--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -422,6 +422,7 @@ li.list-group-item {
     border-bottom-left-radius: 40px;
     border-top-left-radius: 40px;
     color: #fff;
+    font-size: x-large;
 }
 
 .dating-time p {
